Correcting layout-shift

--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -2,6 +2,7 @@ input, textarea, select{
     appearance: none;
     width: 100%;
     border-radius: .5rem;
+    border: 2px solid transparent;
     border: 1px solid var(--stroke-default);
 
     padding: .75rem 1rem;
@@ -19,7 +20,7 @@ label{
 
 input:focus, select:focus, textarea:focus, input[type="date"]:focus-within{
     outline: .25rem solid var(--surface-secondary);
-    border: .125rem solid var(--stroke-highlight);
+    border-color: .125rem solid var(--stroke-highlight);
     outline-offset: .1px;
 }
 
